test/testdata/expected/test2.expected/cluster-gitops/gitops/namespace_regina_resources/routes/argocd-server.txt
NAME            HOST/PORT                                                             PATH   SERVICES        PORT    TERMINATION            WILDCARD
argocd-server   argocd-server-regina.apps.rhoms-4.13-030604.dev.openshiftappsvc.org          argocd-server   https   passthrough/Redirect   None
